bugs removed clean prod ready code